# ifcplusplus

./: .gitignore  CMakeLists.txt
IfcPlusPlus/: CMakeLists.txt
IfcPlusPlus/src/ifcpp/geometry/: StylesConverter.h
IfcPlusPlus/src/ifcpp/geometry/Carve/: CSG_Adapter.h  GeomDebugDump.h  GeomUtils.h  GeometryConverter.h  GeometryInputData.h  IncludeCarveHeaders.h  ProfileConverter.h  RepresentationConverter.h  SolidModelConverter.h  TessellatedItemConverter.h
IfcPlusPlus/src/ifcpp/model/: GlobalDefines.h  StatusCallback.h
IfcPlusPlus/src/ifcpp/reader/: AbstractReader.h  ReaderSTEP.h
IfcPlusPlus/src/ifcpp/writer/: WriterSTEP.cpp  WriterUtil.cpp
